--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script type="text/javascript" src="bundle.js" defer></script>
-    <title>My web page</title>
+    <title>Notes App</title>
   </head>
   <body>
-
+    <h1>Notes app</h1>
+    <div id="main-container">
+      
+    </div>
   </body>
 </html>
