--- a/index.html
+++ b/index.html
@@ -1,59 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script type="text/javascript" src="bundle.js" defer></script>
     <title>Notes App</title>
     <style>
-      h1, p, * {
-  font-family: sans-serif;
-}
+      h1,
+      p,
+      * {
+        font-family: sans-serif;
+      }
 
-html {
-  background:#8ae2ff;
-}
+      html {
+        background: #8ae2ff;
+      }
 
-body {
-  background: white;
-  width: 600px;
-  margin: auto;
-  margin-top: 20px;
-  padding: 20px;
-  border-radius: 10px;
-}
+      body {
+        background: white;
+        width: 600px;
+        margin: auto;
+        margin-top: 20px;
+        padding: 20px;
+        border-radius: 10px;
+      }
 
-.note {
-  border-bottom: 1px solid #aaa;
-  padding: 15px;
-}
+      .note,
+      .error {
+        border-bottom: 1px solid #aaa;
+        padding: 15px;
+      }
 
-input[type=text] {
-  width: 80%;
-  background: #fefefe;
-  border-radius: 4px;
-  padding: 10px 8px;
-  border: 1px solid #444;
-  font-size: 20px;
-}
+      input[type="text"] {
+        width: 60%;
+        background: #fefefe;
+        border-radius: 4px;
+        padding: 10px 8px;
+        border: 1px solid #444;
+        font-size: 20px;
+      }
 
-button {
-  background: #9efa82;
-  border-radius: 4px;
-  padding: 10px 8px;
-  border: 1px solid #444;
-  font-size: 18px;
-  cursor: pointer;
-}
+      button {
+        background: #9efa82;
+        border-radius: 4px;
+        padding: 10px 8px;
+        border: 1px solid #444;
+        font-size: 18px;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
     <h1>Notes app</h1>
-    <input type="text" id="add-note-input">
+    <input type="text" id="add-note-input" />
     <button id="add-note-btn">Add note</button>
-    <div id="main-container">
-
-    </div>
+    <button id="reset-btn">Reset notes</button>
+    <div id="main-container"></div>
   </body>
 </html>
